--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .link_styles {
+    @apply text-neutral-600 hover:text-neutral-800 ;
+  }
+}
