--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   }
 }
 
-.loader {
+/* .loader {
   --uib-size: 80px;
   --uib-color: black;
   --uib-speed: 1.75s;
@@ -56,4 +56,4 @@
   50% {
     transform: translateX(95%);
   }
-}
+} */
