Update link styles , navbar underline and refactor

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,56 +4,9 @@
 
 @layer components {
   .link_styles {
-    @apply text-neutral-600 hover:text-neutral-800;
+    @apply transition duration-300 hover:text-neutral-800;
+  }
+  .underline_span {
+    @apply block focus:block active:block max-w-0 transition-all duration-500 h-0.5 rounded bg-zinc-800;
   }
 }
-
-/* .loader {
-  --uib-size: 80px;
-  --uib-color: black;
-  --uib-speed: 1.75s;
-  --uib-stroke: 5px;
-  --uib-bg-opacity: 0.1;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--uib-stroke);
-  width: 20%;
-  border-radius: calc(var(--uib-stroke) / 2);
-  overflow: hidden;
-  transform: translate3d(0, 0, 0);
-}
-
-.loader::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: var(--uib-color);
-  opacity: var(--uib-bg-opacity);
-  transition: background-color 0.3s ease;
-}
-
-.loader::after {
-  content: "";
-  height: 100%;
-  width: 100%;
-  border-radius: calc(var(--uib-stroke) / 2);
-  animation: wobble var(--uib-speed) ease-in-out infinite;
-  transform: translateX(-95%);
-  background-color: var(--uib-color);
-  transition: background-color 0.3s ease;
-}
-
-@keyframes wobble {
-  0%,
-  100% {
-    transform: translateX(-95%);
-  }
-  50% {
-    transform: translateX(95%);
-  }
-} */
